styles.css
/* ... */
@keyframes fadein {
    from { opacity: 0; }
    to   { opacity: 1; }
}

/* Firefox < 16 */
@-moz-keyframes fadein {
    from { opacity: 0; }
    to   { opacity: 1; }
}

/* Safari, Chrome and Opera > 12.1 */
@-webkit-keyframes fadein {
    from { opacity: 0; }
    to   { opacity: 1; }
}

/* Internet Explorer */
@-ms-keyframes fadein {
    from { opacity: 0; }
    to   { opacity: 1; }
}

/* Opera < 12.1 */
@-o-keyframes fadein {
    from { opacity: 0; }
    to   { opacity: 1; }
}

#divider{
  display: none;
  z-index: 0;
}

#banner_bottom{
  display: none;
  z-index: 0;
}

#instalogo3 {
    width: 4%;
    position: absolute;
    margin: auto;
    margin-left: 125px;
    margin-top: 20px;
}
#instalogo3:hover {
  width: 4.5%;
}

#enlogo3 {
    width: 4.5%;
    position: absolute;
    margin: auto;
    margin-left: 57px;
    margin-top: 20px;
}
#enlogo3:hover {
  width: 5%;
}


header {
    margin-top: 80px;
    text-align: center;
    padding-bottom: 50px;
}

header h1 {
  font-size: 40px;
  font-weight: lighter;
  text-decoration: none;
}

h1#title_bottom {
    font-family: "Fortunates";
    margin-top: 5px;
}

#sign{
  font-family: "Dandeleon";
  font-size: 60px;
  font-weight: lighter;
  text-decoration: none;
}

header a{
  color: black;
  text-decoration: none;
}

.mobile-menu {
  display:block;
  width:100%;
  line-height: 1.6em;
  font-weight: 400;
  width:100%;
  text-align:center;
  position: relative;
  margin:0 auto;
      z-index: 2000;
}
/*Strip the ul of padding and list styling*/
.mobile-menu ul {
  font-size: 18px;
  border-top: solid black 1px;
  border-bottom: solid black 1px;
  list-style-type:none;
  margin: 0 auto;
  padding-left:0;
  text-align:center;
  width:100%;
  position: absolute;
  background-color: white;
  padding-top: 10px;
  padding-bottom: 10px;
}

/*Create a horizontal list with spacing*/
.mobile-menu li {
  display:inline-block;
  /*float: left;
  margin-right: 1px;*/
}

/*Style for menu links*/
.mobile-menu li a {

  display:block;
  min-width:140px;
  text-align: center;
  color: black;
  text-transform:uppercase;
  text-decoration: none;
  margin-left:-5px;
  padding: 10px 0;
  -webkit-transition: all 0.4s ease 0s;
  -moz-transition: all 0.4s ease 0s;
  -ms-transition: all 0.4s ease 0s;
  -o-transition: all 0.4s ease 0s;
  transition: all 0.4s ease 0s;
}

/*Hover state for top level links*/
.mobile-menu li:hover a {
  color: white;
  background-color:black;
}

/*Style for dropdown links*/
.mobile-menu li:hover ul a {
  background: black ;
  color: white;
  height: 40px;
  line-height: 40px;
}

/*Hover state for dropdown links*/
.mobile-menu li:hover .mobile-menu ul a:hover {
  background: black;
  color: white;
}

/*Hide dropdown links until they are needed*/
.mobile-menu li ul {
  display: none;
}

/*Make dropdown links vertical*/
.mobile-menu li ul li {
  display: block;
  float: none;
}

/*Prevent text wrapping*/
.mobile-menu li ul li a {
  width: auto;
  min-width: 100px;
  padding: 0 20px;
}


/*Style 'show menu' label button and hide it by default*/
.mobile-menu .show-menu {
  text-decoration: none;
  color: #fff;
  background: black;
  text-align: center;
  padding: 10px 15px;
  display: none;
  cursor: pointer;
  letter-spacing: 10px;
  font-weight: 900;
  font-family: 'Poppins', sans-serif;
}

.mobile-menu .show-menu span{
   padding-left: 35px;
}

/*Hide checkbox*/
.mobile-menu input[type=checkbox]{
    display: none;
}

/*Show menu when invisible checkbox is checked*/
.mobile-menu input[type=checkbox]:checked ~ #menu{
    display: block;
}

/*Responsive Styles*/

@media screen and (max-width : 900px){
  .mobile-menu li:hover a {
    color: black ;
    background-color:white;
  }
  .mobile-menu li a {
    background-color: black;
    color: white;
  }

  .mobile-menu ul {
    background-color: black;
    color: white;
  }

  /*Make dropdown links appear inline*/
  .mobile-menu ul {
    position: static;
    display: none;
  }
  /*Create vertical spacing*/
  .mobile-menu li {
    margin-bottom: 1px;
  }
  /*Make all menu links full width*/
  .mobile-menu ul li, .mobile-menu li a {
    width: 100%;
  }
  /*Display 'show menu' link*/
  .mobile-menu .show-menu {
    display:block;
  }

  .mobile-menu .show-menu span {
    padding-left: 0;
}
}







/*.navbar {
  color: black;
  text-align: center;
  z-index: 100;
  position: absolute;
  height: 90px;
  width: 1200px;
  border-top: solid black 1px;
  border-bottom: solid black 1px;
  font-size: 18px;
}

ul li {
  margin: 0;
  top: 0;
  bottom: 0;
  overflow: hidden;
  display: inline-block;
  padding-top: 35px;
}

ul a {
  margin: auto;
  text-align: center;
  padding: 20px;
  text-decoration: none;
  color: black;
}

a:visited {
  text-decoration: none;
  color: black;
}

a:hover{
  font:grey;
  font-weight: bold;
}*/










img {
  width: 830px;
  display: block;
  position: absolute;
  margin: auto;
  margin-top: 130px;
  left: 0px;
  opacity: 0.9;
}


#hello{
  display: none;
}

#mobile_selfie{
  display: none;
}

.about_snip{
  height: 450px;
  width: 350px;
  display: block;
  position: relative;
  margin: auto;
  margin-top: 100px;
  right: -420px;
  text-align: center;
  padding: 20px;
  font-size: 15px;
}

h3{
  width: 335px;
  height: 30px;
  padding-top: 7px;
  margin-top: 10px;
  background-color: black;
  color: white;
  letter-spacing: 10px;
  font-weight: 900;
  font-family: 'Poppins', sans-serif;
}

h4{
  width: 335px;
  margin-top: 464px;
  height: 30px;
  padding-top: 7px;
  background-color: black;
  color: white;
  letter-spacing: 10px;
  font-weight: 900;
  font-family: 'Poppins', sans-serif;

}
.about_snip > img {
  float: left;
  position: absolute;
  width: 170px;
  margin: auto;
  top: 80px;
  left: 15px;
  right: 0;
  border-radius: 50%;
  opacity: 0.8;
}
/* ... */

